# Vira-tts

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  infer.py  predict.py  predict_novasr.py  prune_checkpoint.py  pyproject.toml
mira/: codec_novasr.py  decoder_novasr.py  model.py  model_novasr.py  utils.py
